# klartext

./: .gitignore  Cargo.toml  LICENSE  README.md  prompts.toml
src/: errors.rs  lib.rs  main.rs  models.rs  queue.rs  summarizer.rs  worker.rs
src/core/: converter.rs  engine.rs  exporter.rs  mod.rs  validator.rs
src/gui/: mod.rs
tests/integration/: pipeline_test.rs
tests/property/: error_props.rs  exporter_props.rs  main.rs  queue_props.rs  validator_props.rs
