[package]
name = "klartext-rust"
version = "0.1.0"
edition = "2021"
description = "Desktop application for local speech-to-text transcription"

[dependencies]
eframe = "0.31"
egui = "0.31"
parakeet-rs = { version = "0.3", features = ["directml"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "adpcm"] }
symphonia-bundle-mp3 = "0.5"
symphonia-bundle-flac = "0.5"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
